--- a/coding-test/시간복잡도.md
+++ b/coding-test/시간복잡도.md
@@ -4,10 +4,10 @@
 
 즉, 시간복잡도(Time Complexity)는 알고리즘이 실행되는데 필요한 **기본 연산의 횟수**를 입력 크기 **n에 대한 함수**로 나타낸 것이며, Big O 표기법은 **가장 높은 차수의 항만을 고려**하여 알고리즘의 성능을 표현하는데 사용되는 **점근적 표기법**으로 **입력 크기가 매우 클 때**의 동작을 집중적으로 분석한 결과이다.
 ## 종류
->[!info]
 >Fast O(1) < O(log n) < O(n) < O(n log n) < O(n^2) < O(n!) Slow
 
-![[시간복잡도그래프.png]]
+<img width="829" alt="시간복잡도그래프" src="https://github.com/user-attachments/assets/ef06d5f9-7869-41e2-8d43-a90ff228b237">
+
 ### O(1)
 상수 시간 복잡도라고 하며, 입력 크기와 무관하게 항상 일정한 시간이 소요 된다. 대표하는 알고리즘으로는 해시 테이블 삽입/삭제/검색 등이 있다.
 #### 예제
@@ -232,4 +232,5 @@ public class PermutationGenerator {
 만약 재귀 호출 이후에 교환을 되돌리지 않는 다면 배열이 변경된 상태로 남아 이후의 순열 생성에 영향을 미치게된다. 이를 방지하기 위해 재귀 호출 전후로 교환을 수행한다.
 ## 자료 구조별 시간복잡도
 자주 사용하는 자료구조에 대한 각 기능의 시간복잡도를 표현한 표이다. 공부할 때 참고하면서 알고리즘 문제를 풀어보도록 하면 좋을 것 같다.
-![[자료구조별시간복잡도.png]]
+
+<img width="694" alt="자료구조별시간복잡도" src="https://github.com/user-attachments/assets/2ff82c1d-16c2-45c6-96a3-55649b058e64">
