--- a/coding-test/정렬 알고리즘.md
+++ b/coding-test/정렬 알고리즘.md
@@ -20,12 +20,12 @@
 ### 종류
 |구분|시간복잡도(최선/평균/최악)|공간복잡도|안정성|난이도|비고|
 |:---:|:---:|:---:|:---:|:---:|:---:|
-|버블정렬|O(n)/O(n²)/O(n²)|O(1)|O|하|단순하지만 비효율적|
-|선택정렬|O(n²)/O(n²)/O(n²)|O(1)|X|하|데이터 이동 횟수가 적음|
-|삽입정렬|O(n)/O(n²)/O(n²)|O(1)|O|하|거의 정렬된 데이터에 적합|
-|병합정렬|O(n log n)/O(n log n)/O(n log n)|O(n)|O|중|대규모 데이터 정렬에 적합|
-|퀵정렬|O(n log n)/O(n log n)/O(n²)|O(log n)|X|중|실제 환경에서 가장 빠름|
-|힙정렬|O(n log n)/O(n log n)/O(n log n)|O(1)|X|중|메모리 효율적, 느린 경우 있음|
+|버블정렬|O(n) / O(n²) / O(n²)|O(1)|O|하|단순하지만 비효율적|
+|선택정렬|O(n²) / O(n²) / O(n²)|O(1)|X|하|데이터 이동 횟수가 적음|
+|삽입정렬|O(n) / O(n²) / O(n²)|O(1)|O|하|거의 정렬된 데이터에 적합|
+|병합정렬|O(n log n) / O(n log n) / O(n log n)|O(n)|O|중|대규모 데이터 정렬에 적합|
+|퀵정렬|O(n log n) / O(n log n) / O(n²)|O(log n)|X|중|실제 환경에서 가장 빠름|
+|힙정렬|O(n log n) / O(n log n) / O(n log n)|O(1)|X|중|메모리 효율적, 느린 경우 있음|
 
 각 정렬 알고리즘이 효율적으로 동작하는 상황은 다음과 같다.
 - 작은 데이터 : 삽입 정렬
@@ -252,3 +252,36 @@ int partition(int[] arr, int low, int high) {
     return smaller + 1;
 }
 ```
+---
+### Java에서 제공하는 정렬
+#### Dual Pivot Quick Sort
+Java에서는 `Arrays.sort()`를 기본 자료형 배열에서 사용할 때 ==Dual Pivot Quick Srot==를 제공한다. 전통적인 Quick Sort를 개선하여 더 빠른 성능을 제공한다.
+
+**특징**
+- 두 개의 pivot을 사용하여 배열을 세 구간으로 분할
+- 왼쪽 피벗보다 작은 구간 / 두 피벗 사이 / 오른쪽 피벗보다 큰 구간
+- 재귀 호출의 깊이가 줄어들어 성능 향상 가능
+- pivot 선택 전략을 통해 일반적으로 O(n log n)의 시간복잡도를 유지
+- 제자리 정렬로 추가 메모리 사용이 거의 발생하지 않음
+- 안정성을 미보장하여 기본 자료형에만 사용
+
+**사용 예시**
+```java
+int[] arr = new int[] {4, 2, 3, 5, 1};
+Arrays.sort(arr);
+```
+
+#### Tim Sort
+Java 7 버전 이후로 `Collections.sort()`와 `Arrays.sort()`에 적용된 정렬 알고리즘으로 병합 정렬과 삽입 정렬을 결합한 알고리즘이다.
+
+**특징**
+- 안정성을 보장하는 정렬 알고리즘으로 객체 배열에서 동일한 값의 순서를 보장
+- 이미 정렬된 부분을 탐지하여 최적화를 수행
+- 실제 데이터는 이미 정렬된 부분이 많기 때문에 이런 경우 O(n)의 시간 복잡도로 매우 빠르게 동작
+- 병합 정렬과 다르게 추가 메모리를 상대적으로 덜 사용
+
+#### PriorityQueue
+힙 정렬을 기반으로 하는 우선순위 큐 클래스를 제공한다. 요소 추가 및 삭제 시 내부적으로 힙을 유지한다. O(log n)의 시간복잡도를 가진다. Java에서는 우선순위 큐는 최소힙으로 동작한다.
+
+#### TreeSet
+이진 검색 트리를 기반으로 요소를 정렬하여 저장하는 클래스이다. 내부적으로 Red-Black Tree를 사용하고, 요소를 추가 및 삭제할 때 트리를 재구성하는 방식으로 동작한다. O(log n)의 시간복잡도를 가진다.
