--- a/coding-test/정렬 알고리즘.md
+++ b/coding-test/정렬 알고리즘.md
@@ -39,6 +39,11 @@
 인접한 두 요소를 비교하여 필요 시 교환하는 과정을 반복하는 방식으로 동작하여 가장 큰 값이 순차적으로 뒤로 이동한다.
 작은 데이터셋 또는 정렬 알고리즘의 기본 개념을 설명할 때 사용된다.
 
+**동작 방식**
+
+<img src='https://github.com/user-attachments/assets/73193518-dbf5-4ae1-9104-73844d52d7a8' width=400 height=400/>
+
+
 **코드**
 ```java
 void bubbleSort(int[] arr) {
