--- a/coding-test/정렬 알고리즘.md
+++ b/coding-test/정렬 알고리즘.md
@@ -64,6 +64,10 @@ void bubbleSort(int[] arr) {
 #### 선택 정렬 : Selection Sort
 매 단계마다 최소 또는 최대 값을 찾아 해당 위치로 이동시키는 방식으로 동작한다. 주로 기초 정렬 알고리즘을 이해하거나 학습 하기 위한 목적으로 사용된다.
 
+**동작 방식**
+
+<img src='https://github.com/user-attachments/assets/e47c3da0-d403-41b0-8f30-7a1da7eb3091' width=500 height=500 />
+
 **코드**
 ```java
 void selectSort (int[] arr) {
@@ -89,6 +93,10 @@ void selectSort (int[] arr) {
 
 #### 삽입 정렬 : Insertion Sort
 배열을 정렬된 부분과 정렬되지 않은 부분으로 나누고, 정렬되지 않은 부분의 원소를 정렬된 부분에 삽입하는 방식으로 동작한다. 데이터 셋이 이미 정렬된 상태에서 효율적으로 동작하지만 작은 데이터 셋에서는 효율적이지 않다.
+
+**동작 방식**
+
+<img src='https://github.com/user-attachments/assets/e56392bc-2b54-4454-b704-cfb4569b97b0' width=500 height=500 />
 
 **코드**
 ```java
@@ -116,6 +124,10 @@ void insertionSort(int[] arr) {
 
 #### 병합 정렬 : Merge Srot
 분할 정복(divide and conquer) 방법을 사용해서 배열을 반으로 나누어 각각 정렬 후 병합하는 방식으로 동작한다. 안정성이 보장되고, 일정한 성능을 보장하지만 추가적인 메모리 공간이 필요하다.
+
+**동작 방식**
+
+<img src='https://github.com/user-attachments/assets/66e8d038-730c-465f-b173-b6aed4822f97' width=500 height=500/>
 
 **코드**
 ```java
@@ -169,6 +181,11 @@ void merge(int[] arr, int left, int mid, int right) {
 #### 힙 정렬 : Heap Sort
 최대 힙이나 최소 힙 자료구조를 이용하여 배열을 정렬하는 방식으로 동작한다. 항상 O(n log n)의 시간복잡도를 가지며, 추가 메모리 공간이 거의 필요하지 않는다.
 
+**동작 방식**
+
+<img src='https://github.com/user-attachments/assets/8170d415-ff4d-482b-aeb7-f3c2ec19a0ab' width=700 height=700/>
+<img src='https://github.com/user-attachments/assets/b47100a2-a633-4be4-9834-04219245cf77' width=700 height=700/>
+
 **코드**
 ```java
 void heapSort(int[] arr) {
@@ -219,6 +236,10 @@ void heapify(int[] arr, int n, int i) {
 
 #### 퀵 정렬 : Quick Sort
 분할 정복 방법을 사용해서 배열을 정렬하는 방식으로 피벗(pivot)을 기준으로 작은 원소는 왼쪽, 큰 원소는 오른쪽으로 분할하며 정렬한다. 평균적으로는 빠르지만 안정성이 보장되지 않는다.
+
+**동작 방식**
+
+<img src='https://github.com/user-attachments/assets/1f16ea42-bacd-4ea1-a0ac-26683a91635a' width=700 height=700/>
 
 **코드**
 ```java
