--- a/coding-test/재귀함수.md
+++ b/coding-test/재귀함수.md
@@ -106,7 +106,120 @@ factorial(4) -> 4 * 6 = 24
 재귀 함수는 결국 가장 최근에 호출한 함수를 반환하는 형태로 동작한다. 그리고 가장 최근에 호출한 함수를 반환하는 타이밍은 기저 조건을 통해 설정되는 것이다.
 즉, 개발자가 재귀 함수 실행이 언제 멈추어야 하는지에 대한 조건만 명확히 고려한다면 호출의 흐름을 따라가는 것은 크게 어렵지 않을 수 있다.
 
+---
+
+### 예제
+개념적인 부분들을 알아보았으니 실제 코딩 테스트 문제를 통해서 어떻게 재귀 함수를 사용할 수 있는지 알아보자.
+예시에서 사용할 문제는 **백준 1012번 유기농 배추**이다.
+
+<img src='https://github.com/user-attachments/assets/9f9cf3a3-01a7-4a90-af0e-cc4ecc8a221a' width=400 height=300/>
+
+위와 같은 땅이 있을 때 1은 배추가 심어지 위치이고, 0은 배추가 없는 땅을 의미한다. 문제에서 요구하는 출력은 배추흰지렁이의 수를 반환하는 것이다. 조건은 다음과 같다.
+>- 배추흰지렁이는 인접한 다른 배추로 이동 가능
+>- 배추흰지렁이 한마리로 인해 인접한 지역은 해충 보호가 가능
+>- 한 배추의 상하좌우 네 방향에 다른 배추가 위치한 경우에 서로 인접한 것으로 간주
+>- 배추들이 모여있는 곳이 군데군데 있을 때 해충을 보호하기 위해 필요한 배추흰지렁이 수를 반환
+
+위 문제를 사람이 이해한 경우에는 다음과 같은 그림이 나올 수 있다.
+
+<img src='https://github.com/user-attachments/assets/263961ab-7343-49ca-be43-d99c2e4a9be3' width=400 height=300 />
+
+위 그림처럼 연결된 배추의 영역을 확인하고, 지렁이가 5마리 필요하다는 것을 금방 인식할 수 있다. 하지만 컴퓨터의 관점에서는 위치를 하나하나 확인하면서 배추가 없으면 되돌아가거나 무시하고, 있으면 방문처리를 하여 상태를 변경하는 것이 전부이다.
+
+그럼 이것을 코드로 구현하기 전에 기저 조건을 설정해보자.
+- 땅의 범위를 벗어나면 안된다.
+- 배추가 상하좌우로 인접해 있어야하며, 대각선은 적용되지 않는다.
+- 상하좌우 중 배추가 위치해있지 않으면 동작을 중단한다.
+
+설정된 기저 조건을 토대로 코드를 작성해보자.
+
+**코드**
+```java
+public class Main {
+    // 배추가 심어진 땅
+    private static int[][] ground;
+    // 땅의 가로, 세로 크기
+    private static int n, m;
+    // 상하 좌우
+    private static final int[] dx = {0, 0, 1, -1};
+    private static final int[] dy = {1, -1, 0, 0};
+
+    public static void main(String[] args) throws IOException {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        StringBuilder sb = new StringBuilder();
+
+        int t = Integer.parseInt(br.readLine());
+
+        for (int i = 0; i < t; i++) {
+            StringTokenizer st = new StringTokenizer(br.readLine(), " ");
+
+            n = Integer.parseInt(st.nextToken());
+            m = Integer.parseInt(st.nextToken());
+            int k = Integer.parseInt(st.nextToken());
+            ground = new int[n][m];
+            // 입력으로 주어진 위치에 배추가 심어져 있음을 표시
+            for (int j = 0; j < k; j++) { 
+                st = new StringTokenizer(br.readLine(), " ");
+                int x = Integer.parseInt(st.nextToken());
+                int y = Integer.parseInt(st.nextToken());
+
+                ground[x][y] = 1;
+            }
+
+            // 땅을 순회하며 배추가 심어진 위치에서 동작
+            int count = 0;
+            for (int j = 0; j < n; j++) {
+                for (int a = 0; a < m; a++) {
+                    // 배추가 심어져 있고, 방문하지 않은 위치에서만 재귀 함수 호출
+                    if (ground[j][a] == 1) {
+                        recursion(j, a);
+                        count++;
+                    }
+                }
+            }
+            sb.append(count).append("\n");
+        }
+        System.out.println(sb);
+    }
+
+    public static void recursion(int startX, int startY) {
+        Queue<int[]> queue = new LinkedList<>();
+        // 큐에 현재 배추 위치 추가
+        queue.add(new int[]{startX, startY});
+        // 중복 카운트를 방지하기 위해 방문 처리
+        ground[startX][startY] = 2;
+        
+        // 큐에 요소가 사라질 때까지 동작
+        while (!queue.isEmpty()) { // 기저 조건1 : 큐에 요소가 없다는 것은 확인할 배추가 없는 땅
+            int[] current = queue.poll();
+            // 현재 위치 좌표
+            int x = current[0];
+            int y = current[1];
+
+            for (int i = 0; i < 4; i++) { // 재귀 단계 : 배추가 있다면 상하좌우를 확인하는 작업 반복
+                // 상하좌우 방향으로 반복하여 확인
+                int nx = x + dx[i];
+                int ny = y + dy[i];
+
+                // 기저 조건2 : 상하좌우를 확인했을 때 배추가 심어져 있지 않으면 무시
+                // 현재 좌표 범위에 있으면서 1인 요소를 추가하고, 방문처리
+                if (nx >= 0 && nx < n && ny >= 0 && ny < m && ground[nx][ny] == 1) {
+                    queue.add(new int[]{nx, ny});
+                    ground[nx][ny] = 2;
+                }
+            }
+        }
+    }
+}
+```
+위 코드와 같이 재귀 함수를 호출할 조건을 명확히 설정하고, 호출된 재귀 함수 내에서 기저 조건을 설정하여, 코드의 흐름을 통제할 수 있도록 작성해야한다. 이 문제에서는 다음과 같이 재귀 함수가 멈출 수 있는 조건을 설정했다.
+- 배추가 심어져 있는 땅의 없는 경우 -> 큐가 비어있는 상태
+- 배추가 심어져 있는 땅과 연결된 상하좌우에 배추가 없는 경우 -> 큐에 요소를 추가하지 않으므로 위 기저 조건의 발동 조건을 제공
+- 배추가 있는 지점을 방문하면 2로 상태를 변경하여 중복 방문 방지
+
+---
 ### 정리
+여기까지 재귀 함수에 대한 기본적인 내용과 예시를 통해 어떻게 사용할 수 있는지를 알아보았다. 재귀 함수는 다음과 같은 사항을 지속적으로 인식하면서 사용하면 익숙해질 수 있을 것이다.
 - 재귀 함수를 작성할 때 사람과 컴퓨터의 사고방식 차이를 명확히 인지하고 작성해야한다.
 - 달리 말하면 재귀 함수 실행 시 현재 상황에 집중할 수 있는 코드를 작성한다.
 - 재귀 함수의 기저 조건에 대한 고민이 필요하고, 명확한 기저 조건을 설정한다.
