--- a/coding-test/숫자형 기초.md
+++ b/coding-test/숫자형 기초.md
@@ -1,5 +1,5 @@
 ## 개요
->일반 수학과 관련된 기본 코딩 테스트 문제를 통해 코드 어떻게 수학적 문제 해결에 사용하는지 익혀보자.
+>숫자 자료형과 관련된 기본 코딩 테스트 문제를 통해 숫자 자료형에 대한 코드 작성에 대해 익숙해져보자.
 
 ## 문제 풀이
 ### 진법 변환
@@ -26,4 +26,34 @@ Integer.toHexString(a);
 // 19
 // 31
 // 19
+```
+
+### 팰린드롬 숫자 확인
+팰린드롬은 한글로 '회문'이라고도 하며, 어느 방향으로 읽거나 쓰더라도 같은 동일한 문자 또는 수열을 의미한다.
+매개변수로 전달받은 `int x`에 대하여 팰린드롬인지 아닌지 확인하는 방법을 알아보자. 여기서 주의사항은 다음과 같다.
+
+- x의 범위는 int 자료형의 범위이며, 음수도 포함
+- String, char, 배열 등의 자료를 사용하지 않고 확인
+
+```java
+public boolean isPalindrome (int x) {
+  // x를 뒤집은 숫자
+  int reverse = 0;
+  // 변형시킬 x의 값
+  int temp = x;
+
+  // 음수인 경우 false
+  if (x < 0) return false;
+
+  while (temp != 0) {
+    // temp의 나머지를 구하고,
+    // 현재 reverse에 10을 곱해 들어올 자리 마련
+    reverse = reverse * 10 + (temp % 10);
+    // 1의 자리수를 버려가며 반복
+    temp = temp / 10;
+  }
+
+  // 반복문 종료 후에 구성된 reverse
+  return reverse == x;
+}
 ```
