--- a/kotlin/ch10.md
+++ b/kotlin/ch10.md
@@ -10,7 +10,7 @@
 #### 10.1.1 어노테이션 적용
 - 적용하고자 하는 대상 앞에 사용
 - @ + 어노테이션 이름으로 구성
-- 함수, 클래스 등 려어 구성 요소에 사용 가능
+- 함수, 클래스 등 여러 구성 요소에 사용 가능
 
 **기본 문법 예시**
 ```kotlin
