--- a/kotlin/ch10.md
+++ b/kotlin/ch10.md
@@ -63,7 +63,7 @@ fun myFunction() { }
 public void myFunction() { }
 
 // 배열 암묵적으로 전달
-@MyAnnotation({"abc", "def"}) // 배열을 명시적으로 전달
+@MyAnnotation("abc", "def") // 배열을 암묵적으로 전달
 public void myFunction() { }
 ```
 
