--- a/kotlin/ch10.md
+++ b/kotlin/ch10.md
@@ -465,3 +465,168 @@ class Person (val name: String, val age: Int)
 ```
 
 #### 10.2.2 리플렉션을 사용한 객체 직렬화 구현
+이전 챕터들에서 살펴본 내용들을 결합하여 리플렉션을 사용한 객체 직렬화 구현을 수행해보자.
+
+```kotlin
+// 확장 함수
+private fun StringBuilder.serializeObject(x: Any) {
+  append(...)
+}
+```
+확장 함수로 `serializeOjbect`를 구현하여 수신 객체를 일일이 지정할 필요 없이 `append`를 사용한다.
+
+```kotlin
+fun serialize(obj: Any) = buildString { serializeObject(obj) }
+```
+
+- `buildString`은 StringBuilder를 생성해서 인자로 받은 람다에 넘긴다.
+- 람다 본문에 obj를 인자로 전달해 직렬화한 결과를 StringBuilder에 추가한다.
+
+이제 리플렉션을 사용해 실제 구현을 수행한다.
+
+```kotlin
+private fun StringBuilder.serializeObject(obj: Any) {
+    // KClass
+    val kClass = obj.javaClass.kotlin
+    // 클래스의 모든 프로퍼티
+    val properties = kClass.memberProperties
+
+    properties.joinToString(this, prefix = "{", postfix = "}") { prop ->
+        append(prop.name)
+        append(": ")
+        append(prop.get(obj))
+    }
+}
+```
+
+- 클래스의 각 프로퍼티 차례대로 직렬화
+- `serializeString()`과 `serializePropertyValue()`는 표준 라이브러리 함수가 아님
+
+위 예제는 이전 `KProperty`예제와는 다르게 모든 프로퍼티를 열거하기 때문에 정확히 어떤 프로퍼티 인지 알 수 없다.
+`KProperty<Any, *>`으로 동작하며, `Any` 타입을 반환한다.
+
+#### 10.2.3 어노테이션을 활용한 직렬화 제어
+어노테이션을 활용할 때 함수에서는 어떻게 처리하는지 알아본다.
+
+- `@JsonExclude`가 붙은 프로퍼티 제외
+- `KAnnotatedElement` 인터페이스에 annotations 프로퍼티로 모든 어노테이션 획득
+
+```kotlin
+// 어노테이션 또는 null 반환
+inline fun <reified T> KAnnotatedElement.findAnnotation(): T? = annotations.filterIsInstance<T>().firstOrNull()
+```
+
+- 인라인 함수로 타입 파라미터를 실행 시점에 알 수 있도록 적용
+- `filter`를 함께 사용하여 특정 어노테이션 프로퍼티 획득
+
+```kotlin
+private fun StringBuilder.serializeObject(obj: Any) {
+    // KClass
+    obj.javaClass.kotlin.memberProperties
+        .filter { it.findAnnotation<JsonExclude>() == null }
+        .joinToString(this, prefix = "{", postfix = "}") { prop ->
+            append(prop.name)
+            append(": ")
+            append(prop.get(obj))
+        }
+}
+```
+설명한 내용을 반영하여 직렬화로 바꾸면 위와 같다.
+
+**프로퍼티 직렬화**
+```kotlin
+private fun StringBuilder.serializeProperty(
+    prop: KProperty1<Any, *>, obj: Any
+) {
+    // JsonName 어노테이션 프로퍼티 획득
+    val jsonNameAnn = prop.findAnnotation<JsonName>()
+    val propName = jsonNameAnn?.name ?: prop.name
+
+    append(propName)
+    append(": ")
+    append(prop.get(obj))
+}
+```
+
+- `@JsonName`이 적용된 프로퍼티의 이름을 인자로 변경
+
+**CustomSerializer**
+```kotlin
+fun KProperty<*>.getSerializer(): ValueSerializer<Any?>? {
+    val customSerializerAnn = findAnnotation<CustomSerializer>() ?: return null
+    val serializerClass = customSerializerAnn.serializerClass
+    val valueSerializer = serializerClass.objectInstance ?: serializerClass.createInstance()
+
+    @Suppress("UNCHECKED_CAST")
+    return valueSerializer as ValueSerializer<Any?>
+}
+```
+
+- `KProperty`의 확장 함수로 정의
+- `@CustomSerialize` 어노테이션이 있는 경우 `serializerClass`가 직렬화기 인스턴스를 얻기 위해 사용
+- 클래스와 객체 모두 `KClass` 클래스로 표현
+- 다만, 객체에는 `ojbect` 선언에 의한 싱글턴 `ojbectInstance`라는 프로퍼티가 존재
+
+**serializeProperty 최종**
+```kotlin
+private fun StringBuilder.serializeProperty(
+    prop: KProperty1<Any, *>, obj: Any
+) {
+    // JsonName 어노테이션 프로퍼티 획득
+    val jsonNameAnn = prop.findAnnotation<JsonName>()
+    val propName = jsonNameAnn?.name ?: prop.name
+
+    append(propName)
+    append(": ")
+    // 프로퍼티에 정의된 커스텀 직렬화기 사용 적용
+    val value = prop.get(obj)
+    val jsonValue = prop.getSerializer()?.toJsonValue(value) ?: value
+    append(jsonValue)
+}
+```
+
+#### 10.2.4 JSON 파싱과 객체 역직렬화
+역직렬화는 객체의 타입을 실체화한 타입 파라미터를 함수의 타입 인자로 전달하여 객체 인스턴스를 얻는다
+
+```kotlin
+deserialize<Type>(json)
+```
+
+제이키드 기준 JSON 역직렬화기는 3단계로 구성되어있다.
+
+- 어휘 분석기(lexical analyzer, 렉서) : 여러 문자로 이뤄진 입력 문자열을 토큰의 리스트로 변환
+  - 문자 토큰 : 문자를 표현하고, 문법에서 중요한 의미
+  - 값 토큰 : 문자열, 수, 불리언, null 등 상수를 의미
+- 문법 분석기(syntax analyzer, 파서) : 토큰의 리스트를 구조화된 표현으로 변환
+  - 키/값 쌍과 배열로 JSON의 상위 구조를 이해하고 토큰을 JSON에서 지원
+  - 객체의 새로운 프로퍼티를 발견할 때마다 유형에 해당하는 JsonObject의 함수 호출
+- 역직렬화 컴포넌트 : 파싱한 결과로 객체를 생성
+
+**파서 콜백 인터페이스**
+```kotlin
+interface JsonObject {
+  fun setSimpleProperty (propertyName: String, value: Any?)
+  fun createObject (propertyName: String): JsonObject
+  fun createArray (propertyName: String): JsonObject
+}
+```
+
+**역직렬화 과정**
+`{"title": "Catch-22", "author": {"name": "J.Heller"}}`
+
+위 JSON을 렉서가 토큰으로 분해
+
+`{` `"title"` `:` `"Catch-22"` `,` `"author"` `:` `{` `"name"` `:` `"J.Heller"` `}` `}`
+
+파서에 의해 여러 다른 의미 단위를 처리
+
+`o1.setSimpleProperty("title", "Catch-22")`
+`val o2 = o1.createObject("author")`
+`o2.setSimpleProperty("name", "J.Heller")`
+
+필요한 클래스의 인스턴스를 생성하여 반환
+
+`Book("Catch-22", Author("J.Heller"))`
+
+- 타입이 미리 정해진 객체를 만들기 위한 도구인 빌더 패턴과 유사
+- 시드를 사용하여 객체, 컬렉션, 맵과 같은 복합 구조를 만들어 처리
