--- a/kotlin/ch10.md
+++ b/kotlin/ch10.md
@@ -630,3 +630,203 @@ interface JsonObject {
 
 - 타입이 미리 정해진 객체를 만들기 위한 도구인 빌더 패턴과 유사
 - 시드를 사용하여 객체, 컬렉션, 맵과 같은 복합 구조를 만들어 처리
+
+**Seed**
+```kotlin
+interface Seed : JsonObject {
+    fun spawn(): Any?
+    fun createCompositeProperty(propertyName: String, isList: Boolean): JsonObject
+    override fun createObject(propertyName: String) = createCompositeProperty(propertyName, false)
+    override fun createArray(propertyName: String) = createCompositeProperty(propertyName, true)
+    //...
+}
+```
+
+- 만들어낸 객체를 돌려주는 `spawn()`은 빌더와 유사
+- `ObjectSeed`의 경우 생성된 객체 반환
+- `ObjectListSeed`, `ValueListSeed`의 경우 생성된 리스트 반환
+- 역직렬화 시 입력 데이터의 끝에 도달하면 spawn 함수를 호출해서 결과 객체 생성
+
+이제 객체를 역직렬화하는 방법을 중요한 부분들만 알아보도록하자.
+
+먼저 targetClass의 인스턴스를 만들 때 필요한 정보를 아래와 같이 캐시한다.
+```kotlin
+private val classInfo: ClassInfo<T> = classInfoCache[targetClass]
+```
+
+이후 생성자 파라미터와 그 값을 연결하는 맵을 만든다.
+```kotlin
+private val arguments: Map<KParameter, Any?>
+  // targetClass의 인스턴스를 만드는 과정
+  get() = valueArguments + seedArguments.mapValues {it.value.spawn()}
+```
+
+널생성자 파라미터 값이 간단한 값인 경우 그 값을 valueArguments 맵에 기록한다.
+```kotlin
+override fun setSimpleProperty(propertyName: String, value: Any?) {
+  // 생성자 매개변수 획득
+  val param = classInfo.getConstructorParameter(propertyName)
+  // 값 기록
+  valueArguments[param] = classInfo.deserializeConstructorArgument (param, value)
+}
+```
+
+- `propertyName`이 생성자에 정의된 어떤 매개변수에 해당하는지 확인
+- 주어진 매개변수의 값을 역직렬화하여 원래의 데이터 형식으로 변환
+- `param`을 키로 변환된 값을 맵에 저장
+
+마지막으로 인자 맵을 넘겨서 `targetClass` 타입의 인스턴스를 생성한다. 
+```kotlin
+override fun spawn(): T = classInfo.createInstance(arguments)
+```
+
+- `spawn()`은 재귀적으로 복합 인자를 만들어 내부 객체 계층 구조를 구성
+
+#### 10.2.5 리플렉션을 사용해 객체 만들기
+앞서 `KCallable.call()`을 알아보았다. `call()`은 인자 리스트를 받아서 함수나 생성자를 호출하지만 디폴트 파라미터 값을 지원하지 않는다.
+디폴트 파라미터 값을 지원하는 `KCallable.callBy()`에 대해서 알아본 후 리플렉션을 이용한 객체 만들기를 들어가보자.
+
+**KCallalbe.callby()**
+- 함수, 생성자, 속성 접근자 등을 나타내는 리플렉션 클래스
+- 매개변수의 값을 `Map` 형태로 전달하여 호출
+- 전달되지 않은 매개변수는 기본값이 정의된 경우 해당 기본값 사용
+- 기본값이 없는 매개변수가 `Map`에 포함되지 않으면 예외 발생
+
+```kotlin
+fun greet(name: String, age: Int = 25) {
+    println("Hello, $name! You are $age years old.")
+}
+
+fun main() {
+    // greet() 함수의 KFunction 가져오기
+    val greetFunction = ::greet
+
+    // callBy()로 함수 호출 (age 기본값 사용)
+    greetFunction.callBy(
+        mapOf(
+            greetFunction.parameters[0] to "Alice" // 첫 번째 매개변수 name에 값 전달
+        )
+    )
+
+    // callBy()로 모든 매개변수 지정하여 호출
+    greetFunction.callBy(
+        mapOf(
+            greetFunction.parameters[0] to "Bob",
+            greetFunction.parameters[1] to 30 // age에 직접 값 지정
+        )
+    )
+}
+
+>> Hello, Alice! You are 25 years old.
+>> Hello, Bob! You are 30 years old.
+```
+
+- `KFunction`을 통해 `callBy()`를 호출하고, `Map`으로 인자 전달
+- 첫 번째 파라미터는 기본 값이 없기 때문에 값을 전달
+- 두 번째 파라미터는 전달받은 값이 없는 경우 기본값 사용
+
+다음은 클래스 생성자를 호출하는 예제를 보자.
+```kotlin
+class Person(val name: String, val age: Int = 18) {
+    override fun toString(): String {
+        return "Person(name='$name', age=$age)"
+    }
+}
+
+fun main() {
+    // Person 클래스 생성자 가져오기
+    val constructor = ::Person
+
+    // callBy()로 생성자 호출 (age 기본값 사용)
+    val person1 = constructor.callBy(
+        mapOf(
+            constructor.parameters[0] to "John" // 첫 번째 매개변수 name에 값 전달
+        )
+    )
+
+    // callBy()로 모든 매개변수 지정하여 호출
+    val person2 = constructor.callBy(
+        mapOf(
+            constructor.parameters[0] to "Jane",
+            constructor.parameters[1] to 22 // age에 값 지정
+        )
+    )
+
+    println(person1)
+    println(person2)
+}
+
+>> Person(name='John', age=18)
+>> Person(name='Jane', age=22)
+```
+
+위 예제와 마찬가지로 기본값이 있는 경우 사용하고, 없으면 전달해주어야한다.
+
+- 파라미터의 순서를 지킬 필요가 없음
+- 파라미터의 타입과 일치한 타입의 값을 전달해야함
+- 
+
+마지막으로 리플렉션을 사용해 객체를 만드는 예제를 보자.
+```kotlin
+// 클래스 정의
+data class User(val name: String, val age: Int = 30)
+
+fun main() {
+    // 리플렉션으로 클래스 참조 가져오기
+    val userClass = User::class
+
+    // 기본 생성자 호출(기본값이 있는 생성자 필요)
+    val defaultUser = userClass.createInstance()
+    println("Default User: $defaultUser") // age만 기본값으로 설정됨
+
+    // 2. 주 생성자(primary constructor) 호출
+    val primaryConstructor = userClass.primaryConstructor
+    val user = primaryConstructor?.call("Alice", 25)
+    println("Created User: $user")
+
+    // 3. 주 생성자에 기본값을 적용하여 호출
+    val userWithDefaultAge = primaryConstructor?.callBy(
+        mapOf(
+            primaryConstructor.parameters.first { it.name == "name" } to "Bob"
+        )
+    )
+    println("User with default age: $userWithDefaultAge")
+}
+```
+
+- `createInstance()`는 `KParameter.isOptional()`을 이용하여 확인 후 `callBy(emptyMap())`을 반환
+  - `isOptional()`은 파라미터의 기본값이 있는 경우 `true` 반환
+- `primaryConstructor?.call()`을 통해 직접 매개변수를 전달하여 호출 가능
+- `primaryConstructor?.callBy()`에 기본값이 없는 프로퍼티에게 값을 `Map`으로 전달
+
+다음은 동적으로 클래스를 받아 객체를 생성하는 예제를 보자.
+```kotlin
+fun <T : Any> createObject(clazz: KClass<T>, vararg args: Pair<String, Any?>): T? {
+    // 클래스의 주 생성자 가져오기
+    val constructor = clazz.primaryConstructor ?: return null
+
+    // 매개변수와 값을 매핑하여 callBy()로 객체 생성
+    val paramMap = constructor.parameters.associateWith { param ->
+        args.firstOrNull { it.first == param.name }?.second
+    }
+
+    return constructor.callBy(paramMap)
+}
+
+data class Product(val id: Int, val name: String, val price: Double = 10.0)
+
+fun main() {
+    // Product 객체 생성
+    val product = createObject(Product::class, "id" to 1, "name" to "Laptop")
+    println(product)
+}
+
+>> Product(id=1, name=Laptop, price=10.0)
+```
+
+- `KClass<T>`를 통해 클래스 정보를 획득
+- `Pair`를 사용해 해당 클래스의 파라미터를 `key:value` 형태로 전달
+  - `Pair`는 `val pair = "name" to "Test"` 형태로 정의 가능
+  - 또는 `KClass` 객체의 생성자 파라미터를 `to` 키워드를 사용하여 정의 가능
+- 주 생성자의 파라미터를 `associateWith`을 사용하여 `Map`으로 생성
+- `callBy()`를 이용하여 기본값이 허용되는 객체 생성을 지원
