--- a/Redis For Developers/ch01.md
+++ b/Redis For Developers/ch01.md
@@ -67,7 +67,7 @@
 이런 특성은 관계형 데이터베이스의 고정된 스키마 구조, 디스크 I/O 방식, 인덱싱 구조와는 충돌이 발생할 수 있기 때문에 NoSQL을 사용하는 것이 더 적합하다. 물론 최근 관계형 데이터베이스에서는 `TimescaleDB` 등의 별도 라이브러리를 이용하여 처리하기도 하며,`JSOB` 형식 등을 지원하지만 이를 적용하고 관리하기 위한 별도의 메타데이터가 요구되기 때문에 성능상 이점을 제대로 누리기는 어렵다.
 
 ### NoSQL이란?
->No SQL 또는 Not Only SQL을 의미하며, 말 그대로 SQL을 사용하지 않는 데이터 저장소임을 내포한다. 또한 관계가 정의돼 있지 않는 데이터를 저장하는 것이 특징이다.
+>No SQL 또는 Not Only SQL을 의미하며, 말 그대로 SQL을 사용하지 않는 데이터 저장소임을 내포한다. 또한 관계가 정의되지 않은 데이터를 저장하는 것이 특징이다.
 
 마이크로서비스의 저장소로 쓰일 수 있도록 여러 요구 사항을 만족시키는데 NoSQL이 가지는 일반적 특정은 다음과 같다.
 - 실시간 응답 : 각각의 개별 서비스가 빠르게 동작하지 않을 때, 서비스 자체가 병복 현상을 유발 할 수 있기 때문에 빠른 응답 속도 보장
