--- a/Redis For Developers/ch01.md
+++ b/Redis For Developers/ch01.md
@@ -80,24 +80,117 @@
 >비정형 데이터는 정해진 스카마 없이 자유로운 형식으로 저장되는 데이터를 의미한다. 테이블의 열이나 이름, 타입이 일정하지 않으며 데이터의 구조가 매번 다를 수 있다. 이러한 이유로 비정형 데이터를 다루기 위해서는 스키마의 유연성이 필요하며, 중첩 구조 지원을 통해 JSON 형태로 중첩된 데이터를 그대로 저장가능 해야하고, 수평 확장을 통해 데이터를 여러 서버로 분산해야 하며, 스키마 유효성 검증없이 쓰기 성능이 최적화 되어야 한다.
 
 ### NoSQL 데이터 저장소 유형
+![image](https://github.com/user-attachments/assets/1ae652b5-cabf-42ba-adfa-1c1a412a0b47)
+
 #### 그래프
+- 엔티티 간의 관계를 효율적으로 저장하도록 설계
+- 노드, 에지, 속성으로 데이터를 나타냄
+  - 노드 : 데이터의 엔티티
+  - 에지 : 데이터 사이의 관계
+  - 속성 : 에지의 유형과 방향상 정보
+- 관계를 저장하고 표현할 때 유용하게 사용
+- 저장되는 속성의 크기가 크거나 매우 많은 속성을 저장할 때에는 부적합
+
+주로 추천 서비스, 사기 감지, 소셜미디어, 네트워크 및 IT 운영 등의 상황에서 유용하게 사용될 수 있다.
+
 #### 칼럼
+- 테이블을 행이 아닌 열을 기준으로 저장
+- 칼럼 지향적 또는 와이드 칼럼 유형으로도 부름
+- 하나의 열에 중첩된 키-값으로 저장되어 관계형 데이터베이스보다 유연한 스키마 저장이 가능
+- 대량 데이터의 집계 쿼리를 다른 유혀보다 훨씬 빠르게 처리할 수 있음
+
+기업의 BI 분석을 위한 데이터 웨어하우스에서 유용하게 사용될 수 있다.
+
+>칼럼 유형이 유연한 스키마 저장이 가능한 이유는 NoSQL 설계 자체가 "유연한 구조를 수용하도록" 만들어졌기 때문에 결과물로써 해당 특징이 얻어지는 것이다. 칼럼 유형이 유연한 스키마를 저장하는데 특화된 것이 아니라 NoSQL의 설계 이념 자체로 인해 얻어진 결과로 이해하면 된다.
+
 #### 문서
+- JSON 형태로 데이터가 저장되어 개발자들이 편하게 사용할 수 있는 구조
+- 효율적이고 직관적으로 데이터를 사용할 수 있음
+- 스키마가 따로 지정되지 않아 애플리케이션에 맞게 데이터를 그대로 저장 가능
+
+데이터를 저장하거나 검색하는 데 효과적이다.
+
 #### 키-값
+- 가장 단순하고 빠른 구조
+- 키는 관계형 데이터베이스의 PK와 유사하며 데이터를 정의하는 역할을 함
+- 키 자체도 유의미한 데이터로 간주
+- 데이터의 저장이 간단하여 다른 유형보다 수평적 확장이 쉬움
+
+주로 게임, IOT와 같은 실시간 서비스나 로그를 남기는 대규모 세션을 실시간으로 관리하는 상황에서 사용한다.
+
+>NoSQL의 key-value 유형은 Map 자료구조의 개념을 분산 환경과 데이터의 지속성에 맞게 확장한 타입으로 모두 해시 기반 구조로 빠른 조회를 제공하지만 key-value는 서버 간의 데이터 공유가 가능하고, 설정에 따라 지속성이 보장되며, 네트워크를 통한 접근이 가능하다는 등의 이점을 가지고 있다.
 
 ---
 
 ## 레디스
 
 ### 레디스란?
+>Remote dictionary server의 약자로 고성능 키-값 유형의 인메모리 NoSQL 데이터베이스로 오픈 소스 기반의 데이터 저장소다.
 
 ### 특징
 #### 실시간 응답
+![image](https://github.com/user-attachments/assets/a2c9ffe5-71cf-4bc4-a58e-4e4c3f83ddd2)
+
+온디스크 형태와 인메모리 형태의 성능 상의 차이는 디스크 I/O 관점에서 캐시미스 과정이 있냐 없냐로 구분된다.
+
+>캐시미스는 찾고자 하는 데이터가 메모리에 로드되지 않은 상태를 의미하며, 이런 경우 디스크에 가서 데이터를 검색하는 과정 수행한다. 이 때 데이터를 바로 찾을 수 없고 페이지 단위로 메모리에 올린 뒤 메모리에서 데이터를 찾고, 없는 경우 다시 반복하여 찾는 과정을 수행한다. 이렇듯 디스크에 접근하는 빈도(디스크  I/O)가 증가할수록 시스템의 성능이 저하된다. 참고로 인메모리도 캐시미스가 발생하지만 디스크 I/O 관점이 아닌 CPU 관점에서 발생하게 된다. 즉, 캐시미스는 관점의 대상이 달라질 뿐 없어지진 않는다.
+
+![image](https://github.com/user-attachments/assets/997c0d84-8e6f-474c-841b-faa6d54c820c)
+
+인메모리 형태는 모든 데이터가 메모리에서 관리되어 디스크에 접근할 필요가 없기 때문에 비교적 성능이 빠르다.
+
 #### 단순성
+![image](https://github.com/user-attachments/assets/169e6009-51e9-4912-8ec5-00970d429c27)
+
+키에 매핑되는 값에는 문자열뿐만 아니라 hash, set 등 더욱 복잡하고 다양한 데이터 구조 저장이 가능하다.
+
+기존 관계형 데이터베이스는 테이블과 프로그래밍 언어 간 데이터 구조, 기능의 차이로 인해 **임피던스 불일치**가 발생한다. 레디스는 이 부분을 해소하고 개발을 편하게 수행할 수 있다.
+또한, 레디스는 싱글 스레드(정확히는 메인 스레드 1개와 별도의 스레드 3개)로 동작한다. 이벤트 루프를 이용하여 싱글 스레드로 동작하기 때문에 CPU가 적은 서버에서도 좋은 성능을 낼 수 있으며,
+동기화나 잠금 메커니즘 없이도 안정적이고 빠르게 사용자의 요청 처리가 가능하다.
+
+다만, 싱글 스레드로 동작하기 때문에 수행 시간이 오래걸리는 커맨드가 완료될 때까지 대기하는 인적 장애가 발생할 가능성이 매우 높다는 단점이 있다.
+
 #### 고가용성
+자체적으로 HA(High Availability) 기능을 제공하여 복제를 통해 데이터를 여러 서버에 분산시킬 수 있다. 또한 센티널은 장애 상황을 탐지해 자동으로 페일오버를 시켜준다.
+
+>페일오버는 장애 상황이 생긴 경우 미리 준비해둔 보조 서버로 트래픽을 넘겨서 중단 없이 요청을 처리하는 것을 의미한다.
+
 #### 확장성
+![image](https://github.com/user-attachments/assets/12c936da-6eb6-43f3-b98b-651e6ab685e9)
+
+클러스터 모드를 사용하면 손쉬운 수평적 확장이 가능하다. 클러스터 내에서 자동으로 샤딩된 후 저장되고, 데이터베이스 레이어에서 처리되므로 애플리케이션에서는 어느 샤드에 대상 데이터가 있는지 신경쓰지 않아도 된다.
+클러스터 구조에서 모든 레디스 인스턴스는 클러스터 버스라는 프로토콜을 이용해 서로 감시하고, 마스터 노드에 문제가 발생하면 자동으로 페일오버 시켜 고가용성을 유지한다.
+
 #### 클라우드 네이티브 - 멀티 클라우드
+![image](https://github.com/user-attachments/assets/54e460cc-33cd-427f-843b-956a0eae9192)
+
+현대의 개발 및 운영 패러다임을 포용하고, 빠른 배포와 확장성, 높은 복원력을 중심으로 한 애플리케이션을 추구한다. 멀티 클라우드는 여러 클라우드 제공업체의 서비스를 동시에 혹은 혼합해 활용하는 전략이다.
+- 단일 클라우드 환경의 장애나 제한된 자원에 대한 의존성 감소
+- 각 클라우드 서비스 제공자의 강점 활용
+- 데이터가 특정 지역이나 국가 내에 물리적으로 위치하도록 조절 가능
+- 데이터 처리 시 대기 시간 감소 및 장애 상황에 강건한 대응 가능
 
 ### 마이크로서비스 아키텍처와 레디스
+>레디스는 마이크로서비스 아키텍처에서 데이터 저장소 그 이상으로 활용될 수 있는 유연한 데이터베이스다.
+
 #### 데이터 저장소로서의 레디스
+- 각 서비스별 개별 저장소로 사용하기에 알맞음
+- 최소한의 리소스로 막대한 처리량 감당
+- 다양한 자료구조를 제공하며 사용이 간단
+- 로드 밸런서나 프록시 등 추가적인 서비스를 설치할 필요 없음
+- `AOF(Append Only File)`, `RDB(Redis Database)` 형식으로 주기적으로 디스크에 데이터 저장 가능
+
+>RDB는 데이터 전체를 주기적으로 스냅샷으로 디스크에 저장하며 `.rdb` 파일을 생성한다. 백그라운드(fork()) 프로세스로 동작하는 것이 특징이다. 읽기 성능에 영향이 없으며, 파일을 하나로 백업 관리하기가 쉽고, 서버 재시작 시 빠른 복구가 가능하다. 다만, 마지막 스냅샷 이후 데이터는 손실될 수 있으며, fork()로 인한 메모리와 CPU 사용량이 증가한다.
+
+>AOF는 레디스에 수행된 모든 쓰기 명령어를 로그 파일에 기록하고, 서버 재시작 시 로그를 그대로 재실행하여 복구한다. 최대 1초 이내의 손실로 훨씬 더 내구성이 있으며, 데이터 변경 이력까지 포함되지만 로그 파일이 커지기 쉽고, 초기 복구 시간이 명령어에 따라 장시간 소요될 수 있으며, 디스크 I/O가 증가한다.
+
 #### 메시지 브로커로서의 레디스
+서로 다른 서비스 간의 지속적인 통신이 필요하고, 메시지 브로커를 이용해 서비스들 간에 비동기적으로 데이터를 전달할 수 있는 통신 채널을 구현한다.
+이 때 레디스를 매우 유용하게 활용할 수 있다.
+- pub/sub 기능은 가장 간단한 메시지 기능
+- 1개 채널에 데이터를 던지면 이 채널을 구독한 모든 소비자는 데이터를 빠르게 가져갈 수 있음
+- pub/sub에서 모든 데이터는 전달된 뒤 삭제되는 일회성
+- fire-and-forget 패턴이 필요한 간단한 알림 서비스에서 유용하게 사용 가능
+- list 자료 구조는 메시징 큐로 사용하기에 알맞음
+- list에 새로운 데이터가 들어오면 읽어 갈 수 있는 블로킹 기능 사용 가능
+- stream 자료구조 이용 시 데이터를 계속해서 추가되는 방식으로 저장하여 사용 가능 
