--- a/Redis For Developers/ch03.md
+++ b/Redis For Developers/ch03.md
@@ -11,7 +11,7 @@
 - 이진 데이터 포함 모든 종류의 문자열(JPEG, 바이트, HTTP 응답 값 등) `binary-safe`하게 처리
 - 키와 값이 일대일로 연결되는 유일한 자료 구조
 
-> **banary-safe하다?**
+> **binary-safe하다?**
 >
 > 저장되는 데이터가 텍스트인지 바이너리인지 구분하지 않고, 그대로 저장하고 반환한다는 의미로
 > 문자 인코딩, 널 문자, 바이너리 값(0x00, 0xFF... 등)에 대해 해석하거나 수정하지 않는다.
