--- a/Redis For Developers/ch03.md
+++ b/Redis For Developers/ch03.md
@@ -138,6 +138,184 @@ OK
 이러한 이유로 실무에서는 `string`이 가장 많이 사용된다.
 
 ### List
+|key|value|
+|---|---|
+|mylist|[A, B, C, D...]|
+- 레디스의 `list`는 순서를 가지는 문자열의 목록
+- 하나의 list에 최대 42억여 개의 아이템 저장
+- 일반적으로 스택과 큐로서 사용
+
+> 어떤 list를 사용할까?
+>
+> redis 2.x 이하
+> doubly linked list(양방향 연결 리스트)로 구현되어 각 노드는 개별 값(문자열)을 가졌다.
+> LPUSH, RPUSH, LPOP 등의 연산은 O(1)의 시간 복잡도를 가지고, 양방향에서 빠르게 삽입 및 삭제가
+> 가능했지만 메모리 낭비가 심하고, CPU의 캐시 미스가 증가하는 단점이 있었다.
+>
+> redis 3.2 이상
+> quicklist(linked list + ziplist) 도입으로 노드 하나하나가 ziplist라는 compact array list를
+> 포함하도록 변경되었다. quicklist는 linked list와 ziplist의 장점을 융합하였는데 다음과 같다.
+> - linked list
+>  - O(1) 양끝 삽입/삭제
+>  - 매우 큰 리스트 처리 가능
+>  - 리스트 중간 split 가능
+> - ziplist
+>  - 메모리 연속 할당 -> 캐시 히트 증가
+>  - 포인터 오버헤드 감소
+>  - 압축 및 빠른 순차 접근
+> 이를 통해 메모리 사용량은 절감하고, 캐시 히트를 증가시켜 성능 향상을 달성하였다.(참고로 최신 버전에서는 ziplist -> listpack으로 변경)
+
+#### LPUSH & RPUSH
+```bash
+# 기본 사용
+127.0.0.1:6379> LPUSH mylist E
+(integer) 4
+127.0.0.1:6379> RPUSH mylist A
+(integer) 5
+
+# 여러 아이템 한번에 저장
+127.0.0.1:6379> LPUSH mylist A B C
+(integer) 8
+```
+- `LPUSH` : 왼쪽에 데이터 추가
+- `RPUSH` : 오른쪽에 데이터 추가
+
+#### LRANGE
+```bash
+# 모든 요소
+127.0.0.1:6379> LRANGE mylist 0 -1
+1) "E"
+2) "E"
+3) "A"
+4) "syusyu"
+5) "A"
+
+# 특정 범위
+LRANGE mylist 0 2
+1) "E"
+2) "E"
+3) "A"
+```
+- 가장 앞쪽 아이템 0
+- 가장 마지막 아이템 -1
+
+#### LPOP
+```bash
+# 가장 앞쪽 아이템 하나만 제거
+127.0.0.1:6379> LPOP mylist
+"C"
+
+# 갯수 지정
+127.0.0.1:6379> LPOP mylist 5
+1) "B"
+2) "A"
+3) "E"
+4) "E"
+5) "A"
+```
+- `LPOP`만 사용한 경우 지정된 리스트의 가장 앞쪽 데이터만 꺼내오고 출력
+- 숫자까지 지정한 경우 해당 갯수만큼 제거 후 출력
+
+#### LTRIM
+```bash
+127.0.0.1:6379> LRANGE mylist 0 -1
+1) "syusyu"
+2) "A"
+127.0.0.1:6379> LTRIM mylist 0 0
+OK
+127.0.0.1:6379> LRANGE mylist 0 -1
+1) "syusyu"
+```
+인자로 전달된 첫 번째 숫자와 두 번째 숫자의 범위에 속하지 않은 아이템은 모두 삭제하고, 반환하지는 않는다.
+
+#### LPUSH + LTRIM으로 고정된 길이 큐 유지
+`LPUSH`로 요소를 등록하고, 동시에 지정한 범위를 벗어나는 경우 해당 아이템을 제거하는 `LTRIM`을 사용하면
+고정된 길이의 큐를 쉽게 유지할 수 있다.
+
+```bash
+127.0.0.1:6379> LPUSH logdata 0 1 2 3 4
+(integer) 5
+127.0.0.1:6379> LTRIM logdata 0 999
+OK
+```
+`LTRIM`은 해당 인덱스가 없는 경우 아무런 동작이 일어나지 않고, 해당 인덱스에 아이템이 있는 경우에만 삭제한다.
+`list`에서는 꼬리(tail)의 데이터를 삭제하는 작업이 O(1)으로 동작하기 때문에 효율적인 동작이 보장된다.
+
+#### LINSERT
+```bash
+127.0.0.1:6379> LRANGE logdata 0 -1
+1) "4"
+2) "3"
+3) "2"
+4) "1"
+5) "0"
+# 3 앞에 2를 추가
+127.0.0.1:6379> LINSERT logdata BEFORE 3 2
+(integer) 6
+127.0.0.1:6379> LRANGE logdata 0 -1
+1) "4"
+2) "2"
+3) "3"
+4) "2"
+5) "1"
+6) "0"
+127.0.0.1:6379>
+```
+`LINSERT`는 원하는 데이터의 앞이나 뒤에 데이터를 추가할 수 있으며, O(n)으로 동작한다.
+
+#### LSET
+```bash
+127.0.0.1:6379> LSET logdata 1 99
+OK
+127.0.0.1:6379> LRANGE logdata 0 -1
+1) "4"
+2) "99"
+3) "3"
+4) "2"
+5) "1"
+6) "0"
+```
+`LSET`은 지정한 인덱스의 데이트를 신규 입력 데이터로 덮어 쓴다. 인덱스의 범위가 벗어난 경우 에러를 반환한다.
+
+#### LINDEX
+```bash
+# 인덱스에 데이터가 없는 경우
+127.0.0.1:6379> LINDEX logdata 99
+(nil)
+
+# 있는 경우
+127.0.0.1:6379> LINDEX logdata 1
+"99"
+```
+`LINDEX`는 원하는 인덱스의 데이터를 호출한다.
+
+#### 삭제 방법
+```bash
+# DEL
+127.0.0.1:6379> DEL mylist
+(integer) 1
+
+# LTRIM
+127.0.0.1:6379> LTRIM logdata 0 -1
+OK
+```
+- `DEL` : 키 자체를 삭제하여 메모리에서 완전히 해제한다. 가장 빠르고 권장되는 방법이다.
+- `LTRIM` : 의도적으로 범위를 지정하여 list를 비우는 작업 key는 남아있지만 아이템은 0개인 상태이다.
+
+#### list 실무 활용 사례
+주로 순서가 중요하고, 양 끝 삽입/삭제가 빠른 특성을 활용하는 곳에 자주 사용된다.
+- 작업 큐(Task Queue, 가장 대표적) : 작업을 큐에 넣고, 별도의 consumer worker가 꺼내서 비동기로 처리
+  - 이메일 발송 대기열
+  - 문자 발송 대기열
+  - 이미지 변환 작업 큐
+  - 대용량 배치 작업 스케줄링 등
+- 알림 / 메세지 버퍼 : 사용자별 알림 메세지 Stack으로 사용하며, 실시간 push 알림(최근 10건 유지) 등에 사용
+- 로그, 이벤트, 트래킹 히스토리 저장 등 사용 : FIFO 또는 LIFO 히스토리 저장에 가장 적합하게 사용
+- 프로세스 간 메시지 전달 시 사용
+
+`list`는 양쪽 삽입/삭제 성능이 우수하여 Queue 또는 Stack 패턴에 최적화 되어 있으며, 순서 보장을 통해 FIFO, LIFO에 모두 이용된다.
+또한, `BRPOP`을 이용하여 Blocking pop이 지윈되어 다른 작업이 올 때까지 blocking을 유지할 수 있다.
+
 ### Hash
 ### Set
 ### sorted Set
