--- a/Redis For Developers/ch03.md
+++ b/Redis For Developers/ch03.md
@@ -319,6 +319,90 @@ OK
 또한, `BRPOP`을 이용하여 Blocking pop이 지윈되어 다른 작업이 올 때까지 blocking을 유지할 수 있다.
 
 ### Hash
+|key|value|
+|---|---|
+|Product|name -> iw, TypeId -> 334, Version -> 1.0|
+- 필드-값 쌍을 가진 아이템의 집합
+- 하나의 `hash` 자료 구조 내에서 아이템은 필드-값 쌍으로 저장
+- 하나의 `hash` 내에서 유일
+- 필드와 값 모두 문자열 데이터로 저장
+- 동적으로 다양한 필드 추가 가능
+
+#### HSET
+```bash
+127.0.0.1:6379> HSET Product Name "PRO1" TypeID 35
+(integer) 2
+```
+`HSET`은 아이템을 저장할 때 사용하며 한 번에 하나 이상의 필드-값 쌍을 저장 가능하다.
+
+#### HGET & HMGET & HGETALL
+```bash
+# HGET
+127.0.0.1:6379> HGET Product Name
+"PRO1"
+
+# HMGET
+127.0.0.1:6379> HMGET Product Name TypeID
+1) "PRO1"
+2) "35"
+
+#HGETALL
+127.0.0.1:6379> HGETALL Product
+1) "Name"
+2) "PRO1"
+3) "TypeID"
+4) "35"
+```
+- `HGET` : 키와 함께 필드를 입력
+- `HMGET` : 키와 함께 복수 개의 필드 입력
+- `HGETALL` : 키만 입력하면 모든 필드-값 쌍을 차례로 반환
+
+#### HKEYS & HVALS
+```bash
+# HKEYS
+127.0.0.1:6379> HKEYS product
+1) "Name"
+2) "Price"
+
+# HVALS
+127.0.0.1:6379> HVALS product
+1) "test"
+2) "3000"
+```
+- `HKEYS` : 모든 필드 이름 조회
+- `HVALS` : 모든 값 조회
+
+#### 그 외 커맨드
+```bash
+# HEXISTS
+127.0.0.1:6379> HEXISTS product Name
+(integer) 1
+
+# HDEL
+127.0.0.1:6379> HDEL product Price
+(integer) 1
+
+# HLEN
+127.0.0.1:6379> HLEN product
+(integer) 1
+
+# HINCRBY
+127.0.0.1:6379> HINCRBY product count 50
+(integer) 51
+```
+- `HEXISTS` : 데이터에 해당 필드가 존재하는지 확인
+- `HDEL` : 특정 필드 제거
+- `HLEN` : 데이터의 필드 수 조회
+- `HINCRBY` : 숫자 데이터 atomic 연산
+
+#### `hash` 실무 활용 사례
+- 사용자 프로필 캐싱 : DB 조회 없이 빠르게 조회가 가능하고, 구조화된 데이터의 빈번한 읽기/쓰기에 적합
+- Session Data 저장 : 세션 정보를 필드-값으로 나눠서 관리 가능
+- 다중 속성 캐싱 : string의 경우 전체 JSON이 필요하지만 hash의 경우 필요한 필드만 부분 조회 가능
+
+`hash`는 구조화된 데이터 저장에 특화되어 부분 업데이트 및 조회에 사용이 가능하고, 압축률이 좋아 메모리의 효율적 사용이 가능하다.
+또한, 필요한 필드만 읽고 쓰는 과정에서 네트워크 I/O의 부하를 줄여주며, 부분적 필드에 원자성 보장이 가능한 연산을 지원한다.
+
 ### Set
 ### sorted Set
 ### Hyperloglog
