--- a/Redis For Developers/ch03.md
+++ b/Redis For Developers/ch03.md
@@ -404,8 +404,293 @@ OK
 또한, 필요한 필드만 읽고 쓰는 과정에서 네트워크 I/O의 부하를 줄여주며, 부분적 필드에 원자성 보장이 가능한 연산을 지원한다.
 
 ### Set
+|key|value|
+|---|---|
+|myset|(A, B, C, D...)|
+- 정렬되지 않은 문자열의 모음
+- 교집합, 합집합, 차집합 등 집합 연산과 관련한 커맨드 제공
+- 관계 계산 및 유일한 원소를 구해야하는 등의 경우에 사용
+
+#### SADD
+```bash
+127.0.0.1:6379> SADD myset A
+(integer) 1
+
+# 중복된 데이터는 1개만 저장
+127.0.0.1:6379> SADD myset B D C D
+(integer) 3
+```
+이미 `set`에 존재하는 데이터는 중복 저장하지 않는다.
+
+#### SMEMBERS
+```bash
+127.0.0.1:6379> SMEMBERS myset
+1) "A"
+2) "B"
+3) "D"
+4) "C"
+```
+저장된 전체 아이템을 출력하는데 데이터를 저장한 순서와 관계없이 출력된다.
+
+#### SREM & SPOP
+```bash
+# 특정 아이템 제거
+127.0.0.1:6379> SREM myset B
+(integer) 1
+
+# 랜덤 아이템 제거 후 출력
+127.0.0.1:6379> SPOP myset
+"A"
+
+127.0.0.1:6379> SMEMBERS myset
+1) "D"
+2) "C"
+```
+- `SREM` : 특정 아이템을 제거
+- `SPOP` : 랜덤으로 하나의 아이템을 반환하는 동시에 해당 아이템 삭제
+
+> SPOP에 의해 랜덤으로 삭제되면 불편하지 않을까?
+>
+> 순서가 보장되어야 하는 기능에서 set을 사용하여 큐를 구현한다면 당연히 문제가 될 수 있다.
+>
+> 다만, 랜덤 추출이 요구되는 시스템, 예를 들어 이벤트 추첨이나 온라인 게임 랜덤 아이템 드롭 등의 경우에는
+> 랜덤성이 오히려 기능상 필수이기 때문에 적합하게 사용될 수 있다.
+>
+> 이런 이유로 순서가 보장되어야 하거나 특정 아이템이 제거되어야 하는 경우는 SREM을 사용하고,
+> 랜덤성을 요구하는 경우에만 SPOP을 활용한다.
+
+#### 집합 커맨드
+```bash
+# 아이템 추가
+127.0.0.1:6379> SADD set:111 A B C D E
+(integer) 5
+127.0.0.1:6379> SADD set:222 D E F G H
+(integer) 5
+
+# 교집합
+127.0.0.1:6379> SINTER set:111 set:222
+1) "D"
+2) "E"
+
+# 합집합
+127.0.0.1:6379> SUNION set:111 set:222
+1) "A"
+2) "B"
+3) "C"
+4) "D"
+5) "E"
+6) "F"
+7) "G"
+8) "H"
+
+# 차집합
+127.0.0.1:6379> SDIFF set:111 set:222
+1) "A"
+2) "B"
+3) "C"
+```
+- `SINTER` : 교집합 아이템을 추출
+- `SUNION` : 합집합 아이템을 추출
+- `SDIFF` : 차집합 아이템을 추출
+
+#### `set` 실무 활용 사례
+- 사용자 권한 저장 : 같은 role을 여러 번 저장하지 않고, 고유한 값으로 저장하여 사용
+- 태그 시스템 : 게시글에 대한 태그 중복을 방지하고, 빠른 조회가 가능
+- 이벤트 참여 중복 방지 : 이벤트에 참여하는 유저의 정보가 중복되지 않도록 확인하는 경우 사용
+- 실시간 Online 상태 관리 : 현재 접속자 수 조회 등을 조회하는 경우 표준처럼 사용
+
+`set`은 insert 시 중복을 검사할 필요없이 자동으로 제거되며, membership check를 통해 O(1)의 속도를 보장한다.
+또한, 다양한 집합 연산을 신속하게 처리가 가능하기 때문에 실무에서도 빠른 속도를 요구할 때 자주 사용되는 자료 구조이다.
+
 ### sorted Set
+|key|value|
+|---|---|
+|score|user:B -> 100|
+- 스코어 값에 따라 정렬되는 고유한 문자열의 집합
+- 스코어-값 쌍을 이루며 저장될 때부터 스코어 값으로 정렬
+- 스코어가 같다면 사전 순으로 정렬
+- `set`과 유사하게 중복 없이 유일하게 저장
+- `hash`와 유사하게 스코어로 연결
+- 인덱스를 이용한 접근 가능(O(log(n))의 시간 복잡도)
+
+#### ZADD
+```bash
+127.0.0.1:6379> ZADD score:220 100 user:B
+(integer) 1
+127.0.0.1:6379> ZADD score:220 200 user:A 100 user:c 150 user:D
+(integer) 3
+```
+- 스코어-값 쌍으로 입력하여 저장하며, 스코어 값으로 자동 정렬
+- 저장하고자 하는 데이터가 이미 `sorted set`에 있는 경우 스코어만 업데이트
+- 키가 이미 존재하지만 다른 자료 구조라면 오류를 반환
+- 배정밀도 부동소수점 숫자를 문자열로 표현한 값이어야 함
+
+> 배정밀도 부동소수점 숫자란?
+>
+> double precision floating point number로 IEEE 754 표준의 64-bit floating point 형식으로
+> score 값을 저장하고 비교한다는 의미이다.
+>
+> 정수뿐 아니라 소수, 실수, 매우 큰 숫자, 매우 작은 숫자 모두 정밀하게 저장하고 정렬할 수 있다는 의미로
+> 약 ±1.8 × 10³⁰⁸의 충분히 넓은 범위의 숫자를 표현할 수 있다.
+>
+> 결론적으로 정수를 사용했을 때 확보하지 못하는 유연성을 확보하기 위해 배정밀도 부동소수점 숫자를 사용한다.
+
+#### ZADD의 옵션
+- XX : 아이템이 이미 존재하는 경우만 스코어를 업데이트
+- NX : 아이템이 존재하지 않을 때에만 새로 삽입, 기존 아이템의 스코어를 업데이트 하지 않음
+- LT : 새로운 값이 기존 값보다 작은 경우만 업데이트, 아이템이 없는 경우 새로 삽입
+- GT : 새로운 값이 기존 값보다 큰 경우만 업데이트, LT와 같음
+
+#### ZRANGE
+
+**인덱스로 데이터 조회**
+```bash
+# 정상 출력
+127.0.0.1:6379> ZRANGE score:220 0 -1 WITHSCORES
+ 1) "user:B"
+ 2) "100"
+ 3) "user:D"
+ 4) "150"
+ 5) "user:C"
+ 6) "200"
+ 7) "user:c"
+ 8) "200"
+ 9) "user:A"
+10) "300"
+
+# 역순 출력
+127.0.0.1:6379> ZRANGE score:220 0 -1 WITHSCORES REV
+ 1) "user:A"
+ 2) "300"
+ 3) "user:c"
+ 4) "200"
+ 5) "user:C"
+ 6) "200"
+ 7) "user:D"
+ 8) "150"
+ 9) "user:B"
+10) "100"
+```
+`WITHSCORES`를 통해 스코어와 값 모두 조회가 가능하다.
+
+**스코어 범위로 데이터 조회**
+```bash
+# 정상 출력
+127.0.0.1:6379> ZRANGE score:220 150 300 BYSCORE WITHSCORES
+1) "user:D"
+2) "150"
+3) "user:C"
+4) "200"
+5) "user:c"
+6) "200"
+7) "user:A"
+8) "300"
+
+# 값 포함 X
+127.0.0.1:6379> ZRANGE score:220 (150 300 BYSCORE WITHSCORES
+
+# 조건 출력 : 150보다 높은 값
+127.0.0.1:6379> ZRANGE score:220 150 +inf BYSCORE WITHSCORES
+
+# 모든 스코어 범위 값 조회
+127.0.0.1:6379> ZRANGE score:220 -inf +inf BYSCORE WITHSCORES
+
+# 스코어 이용 아이템 역순 조회
+127.0.0.1:6379> ZRANGE score:220 +inf 200 BYSCORE WITHSCORES REV
+```
+- `BYSCORE`를 통해서 스코어를 이용한 조회가 가능
+- 값을 포함하지 않고 싶은 경우 `(`를 추가
+- `+inf`, `-inf`를 이용하여 특정 값보다 크거나 작은 값 출력
+
+**사전 순으로 데이터 조회**
+```bash
+127.0.0.1:6379> ZRANGe mysrotedset (b (f BYLEX
+1) "banana"
+2) "candy"
+3) "dream"
+4) "egg"
+```
+- `BYLEX` : 사전식 순서를 이용해 특정 아이템 조회 가능
+- `(` or `[` 문자가 없는 경우 `ERR min or max not valid string range item`에러 발생
+- `- + BYLEX` : 모든 sorted set의 데이터 조회
+- `ASCII` 바이트 값을 따르기 때문에 한글도 정렬 가능
+
+#### `sorted set` 실무 활용 사례
+`sorted set`은 자동 정렬 및 O(log(n))의 성능 덕분에 실시간으로 정렬과 검색이 동시에
+필요한 데이터 처리에서 많이 활용된다.
+- 실시간 랭킹 시스템 : 전자상거래, 광고 순위 시스템 등에서 우선 순위 분석을 위해 자주 사용
+- 멀티 인스턴스 시스템에서 분산 작업 큐 역할로 사용
+- 예약 메시지 전송 : 예약 시간을 스코어로 사용하여 예약된 메세지 전송
+
+실시간 정렬과 검색이 가능하며, 매우 빠른 삽입 및 검색 속도를 가지고 있기 때문에 정렬 + 조회가
+동시에 필요한 모든 서비스에서 실무 표준으로 사용되고 있다.
+
+### 비트맵
+|key|value|
+|---|---|
+|bitmap|00100010(0~7), 00100010(8~15)...|
+- 독자적인 자료 구조는 아니며 string이 확장한 형태
+- 2의 32 제곱의 비트를 가지고 있는 비트맵 형태
+- 저장 공간을 획기적으로 줄일 수 있음
+
+#### SETBIT & GETBIT
+```bash
+127.0.0.1:6379> SETBIT mybitmap 2 1
+(integer) 0
+127.0.0.1:6379> GETBIT mybitmap 2
+(integer) 1
+```
+
+#### BITFIELD & BITCOUNT
+```bash
+127.0.0.1:6379> BITFIELD bitmap SET u1 7 1 SET u1 10 1 SET u1 14 1
+1) (integer) 0
+2) (integer) 0
+3) (integer) 0
+127.0.0.1:6379> BITCOUNT bitmap
+(integer) 3
+127.0.0.1:6379>
+```
+
+#### 비트맵 실무 활용 사례
+비트맵은 내부적으로 `byte array (8bit = 1byte)`로 저장된다.
+이러한 특성을 이용해 수십~수천만 boolean 값을 `ultra-low memory`로 빠르게 처리하는 경우 강력한 선택지로 작용한다.
+
+실제로 1억 개의 boolean을 `list`로 변환하는 경우 100MB의 용량을 사용한다.
+반면에 비트맵으로 바꿀 경우 12.5MB만으로도 1억 개의 boolean을 저장 가능하다.
+- 출석 체크 시스템 : 사용자들의 아이디를 1로 set하여 사용자들의 출석 상태를 체크
+- 하루 방문자 체크 : 하루가 지난 다음 `BITCOUNT`로 방문자 수 바로 추출하여 사용
+
+비트맵은 메모리 효율적 측면이 다른 자료 구조에 비해 장점으로 부각되어 실무에서 많이 사용된다.
+특히, 대용량 boolean tracking과 초고속 처리는 비트맵의 가장 큰 장점이다.
+
 ### Hyperloglog
+|key|value|
+|---|---|
+|hyperloglog|내부적으로 데이터 변경 처리(집합 형태)|
+- 원소 개수인 카디널리티를 추정할 수 있는 자료 구조
+- 중복되지 않는 고유한 값을 집계할 때 유용하게 사용
+- 데이터 자체를 저장하지 않고 자체적인 방법으로 변경하여 처리
+- 데이터 개수에 구애받지 않고, 계속 일정한 메모리 유지 가능
+- 하나의 자료 구조에 최대 12KB 크기를 가짐
+- 최대 2의 64 제곱개의 아이템을 저장 가능
+
+#### PFADD & PFCOUNT
+```bash
+127.0.0.1:6379> PFADD members 123
+(integer) 1
+127.0.0.1:6379> PFADD members 500
+(integer) 1
+127.0.0.1:6379> PFCOUNT members
+(integer) 2
+```
+
+#### hyperloglog 실무 활용 사례
+- 하루 방문 사용자 수 중 중복 사용자 계산 : 근사치에 대한 유일한 값을 제공
+- 대규모 이벤터 참여자 수 추적 : 중복 sumbit 방지가 필요하지 않음으로 낮은 메모리로 효율 극대화
+
+주로 정확한 수치가 요구될 떄는 `set`을 이용하고, 근사치에 해당하는 수치가 요구될 때 `hyperloglog`를 사용한다.
+
 ### Geospatial
 ### Stream
 
