--- a/Redis For Developers/ch03.md
+++ b/Redis For Developers/ch03.md
@@ -692,7 +692,54 @@ OK
 주로 정확한 수치가 요구될 떄는 `set`을 이용하고, 근사치에 해당하는 수치가 요구될 때 `hyperloglog`를 사용한다.
 
 ### Geospatial
+|key|value|
+|---|---|
+|travel|경도, 위도 쌍 데이터|
+- 경도, 위도 데이터 쌍의 집합
+- 지리 데이터를 저장
+- 내부적으로 `sorted set`으로 저장
+- 키 중복을 허용하지 않음
+
+#### GEOADD
+`GEOADD <key> 경도 위도 member` 순서로 저장되며, `XX`와 `NX` 옵션을 사용할 수 있다.
+
+#### 다양한 커맨드
+- `GEOPOS` : 저장된 위치 데이터 조회
+- `GEODIST` : 두 아이템 사이의 거리 반환
+- `GEOSEARCH` : 특정 위치 기준 원하는 거리 내에 있는 아이템 검색
+  - `BYRADIUS` : 반경 거리를 기준으로하는 옵션
+  - `BYBOX` : 직사각형 거리를 기준으로하는 옵션
+
+#### Geospatial 실무 활용 사례
+내부적으로 `sorted set`을 활용해서 `Geo Hash` + `score`를 조합한 특별한 자료형으로 O(log(n))의 조회 성능을 보장한다.
+
+- 배달 위치 기반 매칭 서비스 : 배달의 민족, 쿠팡 이츠와 같은 시스템 구조에서 필수적으로 사용
+- 주변 매장 검색 : 카페, 음식점, 편의점, 주유소 등 검색
+- 차량 위치 추적 시스템 : 물류 및 렌터카 차량 등의 정보를 확인하는 경우 사용
+- 위치 기반 푸시 알림 : 특정 위치 기준 거리내에 들어오면 알림을 주는 경우에 사용
+
+`Geospatial`은 실시간 위치 검색 등에서 O(log(n))의 성능을 보장하고, DB에서 redis로 위치 정보를 캐싱하여
+DB에 부담을 최소화한다. 이런 특성으로 표준 LBS 캐싱 레이어로 활용된다.
+즉, 대규모 위치 데이터를 `ultra-low latency`로 처리해야하는 서비스에서 표준처럼 사용된다.
+
+> Redis에 너무 많은 위치 정보를 캐싱하면 메모리 점유율이 부담되지 않을까?
+>
+> 실제 서비스에서 Redis를 이용해 위치 정보를 캐싱할 때에는 DB의 full data를 캐싱하는 것이 아니라
+> `active working set only 캐싱`을 통해 유효한 정보에 대해서만 캐싱하여 메모리 점유율을 낮춘다.
+>
+> 또한, 위치 정보 등을 조회하고, 갱신할 때 파티셔닝(샤딩)을 통해서 특정 범위 내에서 수행하여
+> 시스템 부하를 분산시키고 메모리 사용 최적화를 위한 노력이 필요하다. Redis 관점에서도 하나의 key에
+> 과도한 데이터가 쏠리는 것을 방지할 수 있다.
+>
+> 그럼 DB의 유효한 데이터를 Redis로 캐싱할 때 적절한 주기는 어떻게 설정하는가?
+>
+> 이 부분은 서비스의 특성에 따라 다르지만 실시간성 중요도와 네트워크 레이턴시 그리고 비즈니스 로직의 딜레이를
+> 모두 고려했을 때 최소 1초를 보장하는 것이 서버 입장에서는 안전하며, 5초를 넘기지 않는 것이 사용자 입장에서
+> 적당하다. 위치 서비스가 갱신되는 것이 5초 이상 지연될 경우 사용자 입장에서는 느리게 갱신된다고 판단할 수 있다.
+
 ### Stream
+메시지 브로커로서 사용할 수 있게 하는 자료 구조로 데이터를 계속해서 추가하는 방식(append only)으로 저장한다.
+실시간 이벤트 혹은 로그성 데이터의 저장을 위해 사용할 수 있다.
 
 ---
 
