--- a/Redis For Developers/ch03.md
+++ b/Redis For Developers/ch03.md
@@ -745,4 +745,52 @@ DB에 부담을 최소화한다. 이런 특성으로 표준 LBS 캐싱 레이어
 
 ## 레디스에서 키를 관리하는 법
 ### 키의 자동 생성과 삭제
+레디스에서 키의 생성과 삭제는 세 가지 공통적 규칙을 따른다.
+
+- 키가 존재하지 않을 때 아이템을 저장하면 빈 자료 구조를 생성하지만 동일 키에 다른 자료 구조가 생성되어 있다면 에러 반환
+- 모든 아이템을 삭제하면 키도 자동 삭제(stream 제외)
+- 키가 없는 상태에서 읽기 전용 커맨드 수행 시 아이템이 없는 것처럼 동작
+
 ### 키와 관련된 커맨드
+
+#### 키 조회
+- `EXISTS` : 특정 키가 존재하면 1, 존재하지 않으면 0을 반환
+- `KEYS` : 레디스에 저장된 모든 키를 조회하며 글롭 패턴을 통해 키를 조회
+  - 모든 키의 정보를 가져오는 만큼 커맨드 수행 시간 소요
+  - 장시간 소요될 경우 다른 클라이언트의 요청은 대기
+  - 수초 간 마스터는 아무 동작을 할 수 없기 때문에 대기열 증가
+  - 모니터링 도구가 마스터 노드로 helth check를 응답할 수 없어 의도치 않은 페일오버 발생 가능성 증가
+- `SCAN` : `KEYS`를 대체해 키를 조회할 때 사용하며, 커서를 기반으로 특정 범위의 키만 조회 가능
+  - 첫 번째로 반환되는 값은 다음 커맨드 사용 시 인수로 사용할 커서 위치
+  - 0이 반환되면 모든 범위의 키를 반환한 것이라는 의미
+  - 첫 번째 인자가 0이 될 때까지 `SCAN`을 반복적으로 사용
+  - `MATCH` 옵션을 사용할 경우 `KEYS`에서 입력한 패턴에 맞는 키 값을 조회
+  - `MATCH` 사용 시 데이터를 필터링 없이 스캔 후 반환하기 직전에 필터링하는 방식으로 동작
+  - 커서의 범위 내에 패턴과 일치하는 데이터가 없으면 `empty array`를 반환하는 경우가 발생
+  - `TYPE` 사용 시 지정한 타입의 키만 조회 가능
+- `SORT` : `list`, `set`, `sorted set`에서만 사용 가능하며 키 내부의 아이템을 정렬해 반환
+  - `SORT key [BY pattern] [LIMIT offset count] [GET pattern [GET pattern ...]] [ ASC | DESC] [ALPHA] [STORE destination]`
+  - 일부 데이터 조회, 정렬 순서 변경, 사전 순 정렬 등이 가능
+  - `BY`와 `GET` 옵션으로 정렬한 결과를 이용해 다른 키에 접근해서 데이터 조회 가능
+- `RENAME/RENAMENX` : 키의 이름을 변경하는 커맨드이며, `NX`가 붙으면 변경 대상(새로운) 키가 존재하지 않을 떄에만 동작
+- `COPY` : Source에 지정된 키를 destination 키에 복사하며 destination에 지정한 키가 이미 있는 경우 에러 반환
+  - `REPLACE` 옵션을 사용하여 키를 삭제 한 뒤 값을 복사하면 에러가 발생하지 않음
+- `TYPE` : 지정한 키의 자료 구조 타입을 반환
+
+#### 키 삭제
+- `FLUSHALL` : 저장된 모든 키를 삭제하며 SYNC한 방식으로 처리 ASYNC 옵션을 사용하면 백그라운드로 실행하며, 해당 시점에 존재한 키만 삭제
+- `DEL` : 키와 키에 저장된 모든 아이템을 삭제하며 SYNC하게 동작
+- `UNLINK` : `DEL`과 유사하지만 백그라운드에서 다른 스레드에 의해 동작하고, 우선 키와 데이터의 연결을 끊음
+  - 하나의 키에 여러 아이템이 저장된 자료 구조는 키 삭제 시 소요 시간이 오래 걸려 동기적으로 문제가 발생할 수 있음
+  - 이런 문제를 해소하기 위해 `UNLINK`를 사용하여 비동기적으로 키를 삭제
+
+#### 키 만료시간
+- `EXPIRE` : 만료 단위를 초 단위로 정의 가능
+  - `NX`, `XX`, `GT`, `LT` 등의 옵션을 사용 가능
+- `EXPIREAT` : 키가 특정 유닉스 타임 스탬프에 만료될 수 있도록 직접 만료 시간 지정하며, 옵션은 `EXPIRE`와 동일
+- `EXPIRETIME` : 유닉스 타임스탬프의 키 삭제 시간을 초 단위로 반환
+  - 만료 시간 미설정 시 -1 반환
+  - 키가 없는 경우 -2 반환
+- `TTL` : 키의 만료 예상 시간을 초 단위로 반환
+  - 만료 시간 미설정 -1 반환
+  - 키가 없는 경우 -2 반환
