--- a/Redis For Developers/ch04.md
+++ b/Redis For Developers/ch04.md
@@ -53,4 +53,4 @@ data class TypedTuple<V>(
 |ZINTER(값만)|intersect(...)|Set<V>|
 |ZDIFF(값만)|difference(...)|Set<V>|
 
-
+`RedisTemplate`를 이용한 Sorted Set 테스트 코드 : https://github.com/HwangInUng/redis-practice/blob/main/src/test/kotlin/com/redispractice/repository/ReaderBoardRepositoryTest.kt
