--- a/Redis For Developers/ch05.md
+++ b/Redis For Developers/ch05.md
@@ -2,31 +2,236 @@
 
 ## 레디스와 캐시
 ### 캐시란
+>데이터의 원본보다 더 빠르고 효율적으로 액세스할 수 있는 임시 데이터 저장소를 의미
+
+**캐시를 사용하면 좋은 데이터의 유형**
+- 검색 시간이 오래 걸리거나 매번 계산을 해야하는 데이터
+- 원본 데이터 저장소 데이터를 요청하는 것보다 빠르게 가져오고 싶은 데이터
+- 잘 변하지 않는 데이터
+- 자주 검색되는 데이터
+
+원본 데이터 저장소에서 데이터를 읽는 커넥션을 줄여 애플리케이션의 성능을 향상 시킬 수 있으며, 장애가 발생해 데이터에 접근할 수 없는
+상황이 생기더라도 캐시에서 데이터를 가져와 장애 대응 시간을 단축 시킬 수 있다.
+
 ### 캐시로서의 레디스
+레디스를 캐시로 사용하면 다음과 같은 장점이 있다.
+- 키-값 형태로 데이터를 저장하고 반환하는 것이 간단
+- `list`, `hash` 등의 자료 구조를 변환하는 과정 없이 레디스에 바로 저장 가능
+- 인메모리 데이터 저장소 특성 상 검색 및 반환에 상당히 빠름
+- 평균 읽기 및 쓰기 작업에 1ms 미만의 속도 보장
+- 센티널 또는 클러스터를 활용해 운영자의 개입 없이 장애대응 가능
+- 스케일 아웃 또한 쉽게 처리 가능
+
 ### 캐싱 전략
+>데이터의 유형과 데이터에 대한 액세스 패턴에 따라 다르게 적용하여 적절한 캐싱 전략을 선택
+
 **읽기 전략 - look aside**
+데이터를 읽어갈 때 주로 사용하는 전략이며, 가장 일반적으로 배치하는 방법
+- 찾고자 하는 데이터를 캐시에서 확인
+- 있다면 캐시에서 데이터를 읽어옴(캐시 히트)
+- 없다면 직접 데이터베이스에 접근(캐시 미스)
+- 다시 캐시에 해당 데이터를 저장(lazy loading)
+
+`look aside`구조는 레디스에 문제가 생기더라도 데이터베이스에서 데이터를 가지고 오기 때문에 서비스 장애로 이어지지 않지만
+모든 커넥션이 한꺼번에 원본에 접근하게 되어 데이터베이스에 부하가 발생할 가능성이 증가한다.
+
+이미 운영중인 서비스에 레디스를 캐시로 적용할 때에는 데이터베이스에서 캐시로 데이터를 밀어넣는 **캐시 워밍**을 수행한다.
+
+>캐시 워밍?
+>
+>애플리케이션이 시작되거나 배포된 직후에 자주 사용될 데이터를 미리 레디스에 로드해 두는 전략
+>
+>왜 필요한가?
+>레디스 서버의 재시작 등으로 인한 캐시 미스가 폭증하게되면 트래픽이 급증하여 모든 요청이 DB로 가게된다.
+>또한, 최초 요청마다 DB 조회로 인해 지연 및 병목이 발생하여 애플리케이션 성능이 저하 된다.
+>
+>어떻게 해야하는가?
+>자주 조회되는 데이터를 식별해서 애플리케이션이 시작되는 시점이나 배포되는 파이프라인에서 레디스에 미리 캐싱한다.
+>이렇게하면 최초 유저의 요청 시점부터 캐시 히트가 발생하여 DB에 부담을 덜어줄 수 있다.
+>
+>주의사항?
+>너무 많은 데이터를 캐시하면 메모리의 overflow 또는 eviction 유발 가능성이 있으며,
+>TTL을 적절하게 설정하고, 캐시 용량을 사전에 분석하는 것이 중요하다.
+
+**캐시 워밍 예시**
+```java
+@Component
+@RequiredArgsConstructor
+public class ProductCacheWarmup {
+
+    private final ProductRepository productRepository;
+    private final RedisTemplate<String, Object> redisTemplate;
+
+    @PostConstruct
+    public void warmupPopularProducts() {
+        List<Product> products = productRepository.findTop100ByOrderByViewCountDesc();
+
+        for (Product product : products) {
+            String redisKey = "product:" + product.getId();
+            redisTemplate.opsForValue().set(redisKey, product, Duration.ofHours(6));
+        }
+
+        System.out.println("[Cache Warmup] 인기 상품 100개가 Redis에 캐시되었습니다.");
+    }
+}
+```
+- `@PostConstruct`로 애플리케이션 실행 시 캐시 워밍 작업 자동 수행
+- 레디스에 지정된 키의 형식으로 정보를 JSON으로 직렬화하여 저장
+- 만료시간을 6시간으로 설정하여 메모리의 낭비를 방지
+
 **쓰기 전략과 캐시의 일관성**
+캐시와 원본 데이터가 동일한 값을 갖도록 유지하는 것이 필수적이며, 지켜지지 않을 경우 캐시 불일치가 발생한다.
+
 - write through
+  - 데이터베이스에 데이터를 업데이트 할 때마다 매번 캐시에도 업데이트
+  - 매번 2개의 저장소에 저장하기 때문에 시간 소요 증가
+  - 리소스 낭비를 방지하기 위해 만료 시간 사용 권장
 - cache invalidation
+  - 업데이터할 때마다 캐시에서는 데이터를 삭제하는 전략
+  - write through의 단점을 보완한 방법
 - wirte behind(write back)
+  - 쓰기가 빈번하게 발생하는 서비스의 경우 사용
+  - 캐시에 먼저 업데이트 후 일정 주기에 비동기적으로 데이터베이스에 업데이트
+  - 실시간으로 정확한 데이터가 요구되지 않는 경우 사용
+ 
+가장 많이 사용되는 방식은 `look aside`와 `cache invalidation` 방식이다.
+```java
+public User getUser(String userId) {
+    String key = "user:" + userId;
+    User cached = (User) redisTemplate.opsForValue().get(key);
+    
+    if (cached != null) return cached;
+
+    User fromDb = userRepository.findById(userId)
+        .orElseThrow(() -> new RuntimeException("Not found"));
+
+    redisTemplate.opsForValue().set(key, fromDb, Duration.ofHours(6));
+    return fromDb;
+}
+
+public void updateUser(User user) {
+    userRepository.save(user); // DB update
+    redisTemplate.delete("user:" + user.getId()); // 캐시 무효화
+}
+```
+- 캐시에 실제로 필요한 데이터만 올라가고,
+- DB -> 캐시 흐름을 개발자가 명시적으로 관리가 가능하며,
+- TTL 설정이나 무효화 타이밍을 서비스 특성에 맞게 제어가 가능
 
 ---
 
 ## 캐시에서의 데이터 흐름
+캐시는 데이터 스토어가 갖고 있는 데이터 중 사용자가 자주 사용할 만한 데이터를 갖고 와서 임시로 저장하는 저장소의 특징을 가진다.
+따라서 일정 양의 데이터를 유지해야 하기 때문에 적절한 시간의 TTL 값을 지정하여 관리하여야 한다.
+
 ### 만료 시간
+**명령어 정리**
+|명령어|설명|
+|---|---|
+|EXPIRE key seconds|초 단위 TTL|
+|PEXPIRE key milliseconds|밀리초 단위 TTL|
+|TTL key|남은 TTL 확인(초 단위)|
+|PTTL key|남은 TTL 확인(밀리초 단위)|
+|PERSIST key|TTL 제거 -> 영구 저장으로 변경|
+
+TTL은 키 단위로 적용되기 때문에 내부 필드에 별도로 저장이 불가능하다.
+
+**키 삭제 방식**
+|방식|설명|특징|
+|---|---|---|
+|Passive|키에 접근할 때 TTL이 만료된 경우면 삭제|리소스 효율적, 만료된 키가 계속 존재 가능|
+|Active|주기적으로 스캔해서 만료된 키 삭제|메모리 확보에 적극적, CPU 사용 증가|
+
+`Active`방식은 키 중 20개를 랜덤하게 뽑아내고, 만료된 키를 모두 메모리에서 삭제하고, 만약 약 25% 이상의 키가 삭제된 경우
+다시 반복하는 작업을 1초에 10번씩 수행하기 때문에 CPU 사용량이 증가한다.
+
+설정 방식은 다음과 같다.
+- `redis.conf`에 설정
+- Docker 사용 시 환경 변수로 설정
+
 ### 메모리 관리와 maxmemory-policy 설정
 **Noeviction**
+- 데이터가 가득 찬 경우 더 이상 레디스에 데이터를 저장할 수 없다는 에러 반환
+- 캐시로 사용하는 경우 권장하지 않는 설정값
+- 캐시 내부적 판단으로 데이터를 삭제하는 것이 위험하다고 판단되는 경우 사용
+
 **LRU eviction**
+- 가장 최근에 사용되지 않은 데이터부터 삭제하는 정책
+- volatile-lru
+  - 만료 시간이 설정돼 있는 키에 한해서 LRU 방식으로 키를 삭제
+  - 임의적 방식으로 삭제되면 안 되는 값에 대해서는 만료 시간을 미지정
+  - 모든 키에 만료 시간이 지정돼 있지 않은 경우 `Noeviction`과 동일한 에러 반환
+- allkeys-LRU
+  - 레디스 공식 문서에서 추천하는 방식
+  - 모든 키에 대해 LRU 알고리즘을 적용하여 메모리가 꽉 찼을 경우 장애 발생 방지 가능
+
 **LFU eviction**
+- 가장 자주 사용되지 않은 데이터부터 삭제하는 정책
+- 키를 액세스하는 패턴에 따라 우선순위가 유동적으로 바뀐다는 점에서 LRU보다 효율적일 수 있음
+- volatile-lfu : LRU와 유사
+- allkeys-lfu : LRU와 동일
+
 **Random eviction**
+- 저장된 키 중 하나를 임의로 골라내 삭제
+- 레디스의 부하를 줄이기 위한다는 이유로 해당 정책 사용을 권장하지는 않음
+
+**volatile-ttl**
+- 만료 시간이 가장 작은 키를 삭제
+- 삭제 예정 시간이 얼마 남지 않은 키를 추출해 해당 키를 미리 삭제하는 옵션
+- 저장된 모든 키를 스캔하면서 만료 시간을 비교하지 않아도 돼 간단하게 키를 찾기 가능
+
 ### 캐시 스탬피드 현상
+![image](https://github.com/user-attachments/assets/a89ac766-c2b5-4de6-aca2-cc5c6d2b9825)
+
+특정 키가 만료된 시점에서 여러 개의 애플리케이션이 동일한 키에 접근할 떄 중복 읽기 및 중복 쓰기가 발생하는 현상
+
 **적절한 만료 시간 설정**
+분산된 만료 시간을 설정하여 특정 시점에 수천~수만 개의 키가 동시에 만료되는 것을 방지하기 위하여 TTL과 랜덤 오프셋을 추가하여 분산 유도
+```java
+long ttl = Duration.ofMinutes(10).getSeconds();
+long offset = ThreadLocalRandom.current().nextInt(60); // 0~59초
+redisTemplate.opsForValue().set(key, value, ttl + offset, TimeUnit.SECONDS);
+```
+
 **선 계산**
+TTL이 만료되기 전 미리 재계산해서 캐시를 교체해두는 방식으로 스케줄러 또는 백그라운드 작업으로 설정
+```java
+@Scheduled(fixedRate = 5 * 60 * 1000) // 5분마다
+public void refreshPopularProductCache() {
+    List<Product> topProducts = productRepository.findTop100ByViews();
+    redisTemplate.opsForValue().set("product:top100", topProducts, Duration.ofMinutes(10));
+}
+```
+
 **PER 알고리즘**
+캐시 만료 직전에 확률적으로 백그라운드에서 갱신하고, TTL이 가까워질수록 업데이트 확률이 높아진다.
+expire 보다 크다면 조건은 `false`, expire 보다 작다면 조건은 `true`가 된다.
+
+```java
+currentTime - ( timeToCompute * beta * log(rand()) ) > expiry
+```
+
+- currentTime : 현재 남은 만료 시간
+- timeToCompute : 캐시된 값을 다시 계산하는 데 걸리는 시간
+- beta : 기본적으로 1.0보다 큰 값으로 설정
+- rand() : 0과 1 사이의 랜덤 값을 반환하는 함수
+- expiry : 키를 재설정할 때 새로 넣어줄 만료 시간
 
 ---
 
 ## 세션 스토어로서의 레디스
 ### 세션이란
+>서비스를 사용하는 클라이언트의 상태 정보를 의미하며, 클라이언트 간 공유가 불가능
+
 ### 세션 스토어가 필요한 이유
+- 서비스 확장 시 웹 서버가 복수 개로 증가
+- 각 웹 서버별로 세션 스토어를 별도로 관리할 경우 세션 정보가 웹 서버에 종속
+- 웹 서버 간 정보의 정합성이 불일치
+- 또한, 특정 웹 서버에 유저가 몰려 트래픽 집중되는 상황 발생
+- sticky session 발생
+- 레디스를 세션 스토어로 사용하여 데이터를 가볍게 저장하고, 어떤 웹 서버에 연결되어도 동일한 데이터 조회 가능
+
 ### 캐시와 세션의 차이
+|캐시|세션|
+|---|---|
+|데이터베이스의 완벽한 서브셋으로 동작하여, 캐시 내 데이터 유실 시 데이터베이스에서 복구 가능|저장된 데이터는 여러 사용자 간 공유되지 않으며, 특정 사용자 ID에 한해 유효하고, 데이터베이스와 공유되지 않은 유일한 데이터를 보유하기 때문에 내부 데이터 손실 우려|
