--- a/Redis For Developers/ch06.md
+++ b/Redis For Developers/ch06.md
@@ -75,15 +75,84 @@
 - 예를 들어 `SUBCRIBE` 방식의 채널과 그 채널을 포함하는 `PSUBCRIBE` 방식의 채널이 있다면 동시에 메시지 중복 수신
 
 ### 클러스터 구조에서의 pub/sub
-
+- 레디스가 자체적으로 제공하는 데이터 분산 형태의 구조
+- 메시지 발생 시 클러스터에 속한 모든 노드에 자동으로 전달
+- 하나의 노드에 메시지를 발행하면 메시지는 모든 노드에 전파
+- 다만, 모든 노드에 메세지가 전파되는 것은 데이터가 복제되므로 클러스터 환경의 핵심 목표와 부합하지 않음
+- 이로 인한 네트워크 및 리소스 사용에 대한 부하가 발생
 
 ### sharded pub/sub
+- 레디스의 7.0에서 도입하여 클러스터 환경의 pub/sub을 보완
+- 각 채널은 슬롯에 매핑
+- 같은 슬롯을 가지고 있는 노드 간에만 pub/sub 메시지를 전파
+- `SPUBLISH` 커맨드를 이용하여 노드의 복제본에만 전달
+
+**SPUBLISH**
+```bash
+127.0.0.1:6379> SPUBLISH apple a
+(integer) 0
+```
+- 단일 노드 환경에서 사용이 가능
+- 클러스터 환경을 구성했다면 리다이렉트 수행
+
+**SSUBCRIBE**
+```bash
+127.0.0.1:6379> SSUBSCRIBE apple
+1) "ssubscribe"
+2) "apple"
+3) (integer) 1
+1) "smessage"
+2) "apple"
+3) "b"
+```
+- 반드시 `SSUBCRIBE`로 수신 가능
+
+Sharded pub/sub는 불필요한 복제를 줄여 자원 절약이 가능하다.
 
 ---
 
 ## 레디스의 list를 메시징 큐로 사용하기
+>tail과 head에서 데이터를 저장하고 조회할 수 있는 커맨드가 존재하기 때문에 메시징 큐를 직접 구현하여 사용할 수 있다는 장점이 있다.
+
 ### list의 EX 기능
+애플리케이션에서 캐시 대상에 대한 존재 유무를 확인할 필요 없이 `RPUSHX` 커맨드를 사용하여 list에 이미 키가 존재하는 경우에 아이템을 추가할 수 있다.
+
+```bash
+# list에 해당 데이터가 없는 경우
+127.0.0.1:6379> RPUSHX Timelinecache:userA test-data1
+(integer) 0
+
+# 키가 이미 존재하는 경우
+127.0.0.1:6379> RPUSH Timelinecache:userA test-data1
+(integer) 1
+127.0.0.1:6379> RPUSHX Timelinecache:userA test-data2
+(integer) 2
+```
+
 ### list의 블로킹 기능
+**이벤트 큐 동작 방식**
+- 레디스를 이벤트 큐로 사용할 경우
+- 이벤트 큐는 이벤트 루프를 사용
+- 이벤트 루프는 새로운 이벤트가 없는 경우 일정 시간 대기 후 다시 이벤트 큐 확인
+- 위 작업을 `폴링(polling)`이라고 함
+- 폴링 인터벌로 인하여 이벤트를 즉시 처리할 수 없다는 단점 존재
+
+**블로킹으로 해결**
+- list에 데이터가 없는 경우 데이터가 들어올 때까지 대기
+- 값이 들어오면 즉시 반환하거나 클라이언트가 설정한 타임아웃 시간만큼 대기한 후 `nil`값 반환
+- 하나의 리스트에 대해 여러 클라이언트가 동시에 블로킹 가능하며,
+- 가장 먼저 요청을 보낸 클라이언트에게 반환
+
+**BRPOP & BLPOP**
+```bash
+127.0.0.1:6379> BRPOP queue:a 5
+(nil)
+(5.00s)
+```
+- 첫 번째 반환 값은 팝된 리스트의 키 값
+- 두 번째 반환 값은 데이터의 값
+- 동시에 여러 개의 리스트에서 대기할 수 있게 하기 위함
+
 ### list를 이용한 원형 큐
 
 ---
