--- a/Redis For Developers/ch06.md
+++ b/Redis For Developers/ch06.md
@@ -6,8 +6,8 @@
 ## 메시징 큐와 이벤트 스트림
 |구분|메시징 큐|이벤트 스트림|
 |---|---|---|
-|데이터 생성|생산자(producer)|소비자(consumer)|
-|데이터 수신|발행자(publisher)|구독자(subcriber)|
+|데이터 생성|생산자(producer)|발행자(publisher)|
+|데이터 수신|소비자(consumer)|구독자(subcriber)|
 |방향성|데이터를 직접푸시하며, 메시징 큐에 각각 데이터를 푸시|특정 저장소에 하나의 메세지를 보낼 수 있고, 소비자들은 스트림에서 같은 메시지를 풀하기 때문에 데이터 복제 불필요|
 |영속성|데이터를 읽어갈 때 큐에서 데이터 삭제|저장소 설정에 따라 특정 기간 동안 저장 유지|
 |확인 시기|새로운 소비자 추가 시 새롭게 추가된 시점 이후 이벤트만 확인|데이터 생산 시 구독자를 지정하지 않기 때문에 이전 데이터의 히스토리 확인 가능|
